data/all_generated_tests/raw_wast_tests/br_table_StackCorruption_2080.wast
;; 10. **Test: Inconsistent Label Vector Encoding**     - **Description:** Provide an incorrectly encoded vector of label indices where actual and expected operand counts differ.     - **Constraint:** Ensures proper encoding and decoding of label indices.     - **Relation to Stack Corruption:** Checks if malformed indices vector leads to stack mismanagement or corruption.

(assert_invalid
  (module
    (func $inconsistent-label-vector-encoding
      (block
        (block
          (br_table 0 2 0 (i32.const 1)) (i32.const 1)
        )
      )
    )
  )
  "type mismatch"
)